# houses

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  data.dvc  dvc.yaml  lint.py  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: main_workflow.yaml  train.yaml
data/: raw.dvc
data/model_input/: x_train_final.csv  y_train_final.csv
data/model_output/: .gitignore
houses/: constants.py  estimators.py  evaluate.py  prepare_train_data.py  preprocess.py  train.py
src/: constants.py  estimators.py  evaluate.py  prepare_train_data.py  preprocess.py  train.py
tests/: test_estimators.py
