# See https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "houses"
description = "Houses demo project"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version", "dependencies"]
keywords = ["houses", "prediction"]

license = { text = "Proprietary" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Topic :: Software Development",
    "Typing :: Typed",
]

# Add url = "https://github.com/nshahpazov/houses"

[project.optional-dependencies]
dev = [
    "setuptools>=61.0.0",
    "setuptools-scm[toml]>=6.2",
    "pre-commit>=2.20.0",
    "black>=22.6.0",
    "flake8>=5.0.4",
    "flake8-pyproject>=1.1.0",
    "pytest>=7.1.2",
    "isort>=5.10.1",
]


[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = "houses.version.__version__" }
dependencies = {file = ["requirements.txt"]}
# NOTE: tool.setuptools.packages.find automatically finds the package from `src`

[tool.setuptools_scm]

[tool.flake8]
ignore = ['E203', 'E231', 'W503']
exclude = ['.git']
max-line-length = 100
count = true

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"


[tool.pytest.ini_options]
# Docs: https://docs.pytest.org/en/7.1.x/reference/customize.html#pyproject-toml
minversion = "6.0"
testpaths = ["tests"]
# addopts = "-ra -q"

[tool.mypy]
# Docs: https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
python_version = "3.10"
warn_unused_configs = true
warn_return_any = false
files = ["houses", "tests"]

[[tool.mypy.overrides]]
module = "houses.*"
# disallow_untyped_defs = true
namespace_packages = false

[[tool.mypy.overrides]]
module = ["pandas", "pyspark", "setuptools", "setuptools_scm"]
ignore_missing_imports = true
